@@ -1,0 +1,3 @@
+unit role MetamodelX::Red::Populatable;
+
+method populate(|) {}
